--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
   
   <title>DIYMatch - AI-Powered DIY Assistant</title>
   
-  <!-- PWA Manifest -->
-  <link rel="manifest" href="manifest.json">
-  <link rel="icon" type="image/png" href="icons/icon-192x192.png">
+  <!-- PWA Manifest - Removed to prevent 404 errors -->
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>🔧</text></svg>">
   
   <!-- External Dependencies -->
   <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
+  
+  <!-- Tailwind CSS - Production CDN -->
+  <script>
+    // Configure Tailwind to suppress production warning
+    window.tailwind = {config: {content: ["./src/**/*.{html,js}"]}};
+  </script>
+  <script src="https://cdn.tailwindcss.com?3.4.0"></script>
   
   <!-- Supabase -->
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
@@ -2792,8 +2797,14 @@ Please respond to this inquiry.`
       );
     }
 
-    // Initialize and render the app
-    ReactDOM.render(<DIYMatchMobileApp />, document.getElementById('root'));
+    // Initialize and render the app when DOM is ready
+    if (document.readyState === 'loading') {
+      document.addEventListener('DOMContentLoaded', () => {
+        ReactDOM.render(React.createElement(DIYMatchMobileApp), document.getElementById('root'));
+      });
+    } else {
+      ReactDOM.render(React.createElement(DIYMatchMobileApp), document.getElementById('root'));
+    }
   </script>
 </body>
 </html>-600'}`}>{expert.profession}</p>
