--- a/index.html
+++ b/index.html
@@ -665,14 +665,14 @@
   
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
-  <script>
+  <script data-type="text/javascript">
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'G-XXXXXXXXXX');
   </script>
   
-  <script type="text/babel">
+  <script type="text/babel" data-type="module">
     // ============================================================================
     // CONFIGURATION & INITIALIZATION
     // ============================================================================
